fix link width and tag wrapping

--- a/web_root/main.css
+++ b/web_root/main.css
@@ -194,17 +194,15 @@ button {
     max-height: 225px;
     margin-left: auto;
     margin-right: auto;
+    display: block;
     border: none;
 }
 .metadata {
-    width: auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     padding-bottom: 5px;
 }
 .tags {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     flex-direction: row;
 }
