--- a/web_root/theme.css
+++ b/web_root/theme.css
@@ -3,7 +3,7 @@
     --mid-d: #42464d;
     --mid-l: #969896;
     --bg: #282a2e;
-    --bg-l: #383a3e;
+    --bg-l: #303236;
     --hl: #b0b0e0;
     --hl-dim: #a0a0c0;
     --red: #cc6666;
